# plugins

./: Cargo.toml  README.md
.github/workflows/: ci.yml
browser-cdp/: Cargo.toml
browser-cdp/src/: cdp.rs  lib.rs
docs/dev/: index.md
filesystem-extended/: Cargo.toml
filesystem-extended/src/: lib.rs
fs-editor/: Cargo.toml  manifest.json
fs-editor/src/: lib.rs
native/browser-cdp/: Cargo.toml  runtime.json  test_flipkart.sh
native/browser-cdp/src/: cdp.rs  lib.rs
native/browser-cdp/src/tools/: basic.rs  mod.rs  session.rs  smart.rs  utils.rs
plugins/filesystem-extended/: Cargo.toml
plugins/fs-editor/: allowed_imports.txt  manifest.json
plugins/vision/: Cargo.toml
plugins/vision/src/: lib.rs
scripts/: ci-bundle.py  sign-manifest.py
vision/: Cargo.toml
