[package]
name = "fs-editor"
version = "0.1.0"
edition = "2021"
authors = ["Rove Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
