[package]
name = "browser-cdp"
version = "0.1.0"
edition = "2021"
authors = ["Rove Team"]
license = "MIT"
description = "Chrome CDP browser backend for Rove"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdk = { path = "../../../core/sdk" }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "process", "net", "io-util", "macros", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
