[package]
name = "vision-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Rove Team"]
license = "MIT"
description = "Vision tools for Rove (capture_screen)"

[lib]
crate-type = ["cdylib"]

[dependencies]
sdk = { path = "../../../core/sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
